# rust-clamav-wrapper

./: Cargo.toml
src/: main.rs
