[package]
name = "rust-clamav-wrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# web
actix-web = "=4.0.0-beta.18"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# clamav
clamav-client = "0.1.3"

# logging
log = "0.4"
tracing = "0.1.29"
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3.4", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.1"
tracing-log = "0.1.2"